**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.14 - SVN
--------------------
  - Added support for Macedonian.
  - Don't allow invalid plugin names in conf.pl --install-plugin
  - Fix warning in Printer Friendly due to missing include (#1849101).

Version 1.4.13 - 14 December 2007
---------------------------------
  - Include compatibility plugin files if available.
  - Some IMAP servers send nil for an empty email body (See RFC2180,
    section 4.1.3 on empty strings).
  - New release to clear up any confustion with respect to
    compromised 1.4.11 and 1.4.12 packages [CVE-2007-6348].

Version 1.4.12 - 04 December 2007
---------------------------------
  - Enabled user selection of address format when adding from address
    book during message composition.
  - Fixed issue with adding attachments in PHP 4.x environments (#1805471).
  - Backport size setting on "newmail" popup window.
  - Added a "short_open_tag" configuration test.
  - Undefined notice in error message box when no default folder prefix is set.
  - Undefined index error when downloading.  Possibly caused by using tabs and
    opening multiple mailboxes.
  - PAGE_NAME might not be defined in all plugins, which might cause a 
    "not defined" error on session timeouts.
  - Fixed outgoing messages to allow addresses such as "0@..." or "000@...",
    etc. (#1818398).
  - Fixed issue with in-reply-to and reference headers not being retained on
    reply (#1810659).
  - Revived logout_error hook (#1800015).
  - Allow custom session handlers to work correctly (and be defined at the
    application level with SquirrelMail).
  - Fix off-by-one in bodystructure parsing triggered by servers sending
    a body location part (e.g. Sun Java System Messaging Server). Thanks
    John Callahan (#1808382).
  - Invalid initialization of To: header (#1772893).
  - Includes cleanup in include/validate.php.